# phoenix-orch

./: .env.example  .gitattributes  .gitignore  ASHEN_GRAVITY.md  CHAT_DEBUG_REPORT.md  CHAT_TEST_GUIDE.md  CIPHER_GUARD_STATUS.md  COMMIT_FAILURE_DIAGNOSTIC_REPORT.md  CONNECTION_COMPLETE.md  CONSCIENCE_PROTECTION_SYSTEM.md  CONTEXT_ENGINEERING.md  CORS_FIX_SUMMARY.md  Cargo.toml  DUAL_PERSONA_IMPLEMENTATION.md  EMBER_UNIT_REBRANDING_SUMMARY.md  EMBER_UNIT_STATUS.md  ETHICAL_PENTEST_FRAMEWORK_GUIDE.md  FALCON_9_BLOCK_GRADE_REPORT.md  FINAL_REMEDIATION_SUMMARY.md  FIX_404_DIAGNOSTIC.md  GIT_LFS_SETUP.md  INTEGRATION.md  NEURAL_EMOTION_SYSTEM_INTEGRATION_REPORT.md  OrchestratorAgent_Design.md  PHOENIX_ORCH_PURIFICATION_PLAN.md  PHOENIX_ORCH_UI_UX_TRANSFORMATION_REPORT.md  PRIORITY_3_REMEDIATION_COMPLETE.md  README.md  REMEDIATION_COMPLETE.md  REMEDIATION_SUMMARY.md  REMOVAL_EXECUTION_LOG.md  RESTART_SERVER.md  RUST_DIAGNOSTIC_AUTOPSY.md  SINGLE_SOURCE_EXECUTION_REPORT.md  SINGLE_SOURCE_OF_TRUTH_VIOLATIONS.md  SINGLE_SOURCE_REMOVAL_COMPLETE.md  SUBCONSCIOUS_CONNECTION_GUIDE.md  SUBCONSCIOUS_WIRING_FIX.md  TESTING_GUIDE.md  TEST_EXECUTION_REPORT.md  (+37 more)
crates/cipher-guard/: Cargo.toml  README.md
crates/cipher-guard/src/: agent_integration.rs  api.rs  command_parser.rs  desktop_path_resolver.rs  disk_encryption.rs  disk_encryption_conscience.rs  error.rs  ethics.rs  file_system.rs  knowledge_base.rs  lib.rs  telemetry.rs  websocket.rs
crates/cipher-guard/src/evidence/: chain_of_custody.rs  encryption.rs  integrity.rs  mod.rs  preservation.rs
crates/cipher-guard/src/matrix/: controls.rs  kill_chain.rs  mitigation.rs  mod.rs  vulnerability_map.rs
crates/cipher-guard/src/orchestration/: agents.rs  coordination.rs  mod.rs  tasks.rs
crates/cipher-guard/src/reporting/: formats.rs  mod.rs  professional.rs  templates.rs
crates/cipher-guard/src/tests/: disk_encryption_test.rs  file_system_test.rs  knowledge_base_test.rs  mod.rs
crates/ember-unit/: Cargo.toml
crates/ember-unit/src/: agent_manager.rs  api.rs  c2_orchestrator.rs  conscience.rs  engagement.rs  error.rs  integration.rs  lib.rs  network_scanner.rs  network_scanner_api.rs  phases.rs  plastic_ltm.rs  reporting.rs  safety.rs  services.rs  world_model.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
phoenix-kernel/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_POLICY.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.toml  docker-compose.yml  phoenix-kernel.service
phoenix-kernel/alertmanager/: alertmanager.yml
phoenix-kernel/alertmanager/template/: phoenix.tmpl
phoenix-kernel/cipher-guard/: Cargo.toml
phoenix-kernel/cipher-guard/src/: lib.rs  memory.rs  reporting_system.rs  websocket.rs
phoenix-kernel/cipher-guard/tests/: integration_test.rs
phoenix-kernel/incremental-learner/: Cargo.toml
phoenix-kernel/incremental-learner/src/: lib.rs
phoenix-kernel/perception-fusion/: Cargo.toml
phoenix-kernel/perception-fusion/src/: lib.rs  pure_impl.rs  pure_rust.rs
phoenix-kernel/phoenix-common/: Cargo.toml  LOGGING_AND_PANIC_RECOVERY.md
phoenix-kernel/phoenix-common/src/: error.rs  lib.rs  logging.rs  metrics.rs  safety.rs  task.rs  types.rs
phoenix-kernel/phoenix-core/: Cargo.toml  HEALTH_ENDPOINTS.md  MEMORY_LEAK_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  TEST_REPORT.md
phoenix-kernel/phoenix-core/benches/: http_benchmarks.rs
phoenix-kernel/phoenix-core/src/: api.rs  config.rs  core.rs  error.rs  lib.rs  main.rs  metrics.rs  metrics_windows.rs  signals.rs  signals_windows.rs  system.rs
phoenix-kernel/phoenix-core/tests/: chaos_tests.rs  component_integration.rs  e2e_chat_test.rs  failure_scenarios.rs  http_endpoints.rs  http_load_tests.rs  integration_test.rs  load_tests.rs  memory_diagnostics.rs  property_tests.rs  startup_smoke.rs
phoenix-kernel/phoenix-debug-trace/: Cargo.toml
phoenix-kernel/phoenix-debug-trace/src/: lib.rs
phoenix-kernel/phoenix-self-heal/: Cargo.toml
phoenix-kernel/phoenix-self-heal/src/: lib.rs
phoenix-kernel/plastic-ltm/: Cargo.toml
phoenix-kernel/plastic-ltm/src/: lib.rs
phoenix-kernel/plugin-voice/: Cargo.toml
phoenix-kernel/plugin-voice/src/: lib.rs
phoenix-kernel/prometheus/: prometheus.yml
phoenix-kernel/prometheus/rules/: phoenix_alerts.yml
phoenix-kernel/triune-conscience/: Cargo.toml
phoenix-kernel/triune-conscience/src/: lib.rs
phoenix-kernel/value-lock/: Cargo.toml
phoenix-kernel/value-lock/src/: lib.rs
phoenix-kernel/world-self-model/: Cargo.toml
phoenix-kernel/world-self-model/src/: lib.rs
src/: Cargo.toml  lib.rs
src/context_engineering/: evolution.rs  mod.rs  phoenix_context.rs
src/context_engineering/tests/: mod.rs
src/memory/: index.ts
src/memory/agents/: authentication.ts  index.ts  middleware.ts  permissions.ts  registry.ts  types.ts
src/memory/eternal/: README.md  covenant.ts  guardian.ts  index.ts  initialization.ts  initialize-eternal-protection.ts  protection.ts  sealing.ts
src/memory/isolation/: validator.ts
src/memory/logging/: access-logger.ts
src/memory/modes/: authentication.ts  index.ts  manager.ts  state.ts  switcher.ts  types.ts
src/memory/retention/: README.md  archive.ts  index.ts  kb-integration.ts  manager.ts  monitoring.tsx  policies.ts  purge.ts  scheduler.ts
src/memory/tests/: isolation.test.ts
src/memory/threat-intel-kb/: feeds.ts  index.ts
src/memory/types/: index.ts
src/memory/visual/: README.md  example.tsx  flame-indicator.tsx  hooks.ts  index.ts  styles.css  types.ts
src/memory/work-kb/: index.ts  retention.ts
src/modules/: mod.rs  notifications.rs
src/modules/orchestrator/: agent.rs  agent_manager.rs  antigravity_core.rs  artifacts.rs  browser_agent.rs  conscience.rs  context.rs  errors.rs  mod.rs  model_router.rs  modes.rs  planner.rs  tauri.rs  terminal_agent.rs  tools.rs  types.rs  vector.rs
src/modules/report_squad/: conscience.rs  lib.rs  types.rs  workflow.rs
src/orchestration/: ashen_gravity.rs  mod.rs
src/orchestration/tests/: ashen_gravity_integration_tests.rs
(+764 files in other folders)
