[package]
name = "phoenix-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "phoenix_kernel"
path = "phoenix-core/src/lib.rs"

[[bin]]
name = "phoenix-daemon"
path = "phoenix-core/src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
thiserror = "1.0"
toml = "0.8"
prometheus = "0.13"
futures = "0.3"
hyper = "0.14"

# Optional Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_Foundation"
]}
sysinfo = "0.29"

# Component crates
incremental-learner = { path = "incremental-learner" }
perception-fusion = { path = "perception-fusion" }
phoenix-debug-trace = { path = "phoenix-debug-trace" }
phoenix-self-heal = { path = "phoenix-self-heal" }
plastic-ltm = { path = "plastic-ltm" }
triune-conscience = { path = "triune-conscience" }
value-lock = { path = "value-lock" }
world-self-model = { path = "world-self-model" }

[dev-dependencies]
tokio-test = "0.4"
