[package]
name = "phoenix-orch-modules"
version = "0.1.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Phoenix ORCH Core Modules Library"
license = "MIT"

[lib]
name = "phoenix_orch_modules"
path = "lib.rs"

[dependencies]
# Phoenix dependencies
triune-conscience = { path = "../phoenix-kernel/triune-conscience" }
world-self-model = { path = "../phoenix-kernel/world-self-model" }
phoenix-common = { path = "../phoenix-kernel/phoenix-common" }
plastic-ltm = { path = "../phoenix-kernel/plastic-ltm" }
tch = { path = "../crates/tch" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { workspace = true, features = ["sqlcipher"] }

# Machine learning and content analysis
opencv = { version = "0.79", features = ["clang-runtime", "face"] }
age-estimation = "0.1.2"
document-classification = "0.2.1"
text-pattern-analyzer = "0.3.0"
voice-command-detector = "0.2.5"

# Image processing for redaction
image = "0.24"
imageproc = "0.23"

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1.6", features = ["derive"] }
secrecy = "0.8"
aes-gcm = "0.10.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.18"
rand = "0.8.5"
base64 = "0.13"
dashmap = "5.5"
tracing = "0.1"

# Tauri (for frontend integration)
tauri = { version = "1.5", features = ["api-all"] }
tauri-plugin-webview = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# Neural Emotion Engine dependencies
crepe = "0.2"
opensmile-rs = "0.1"
nalgebra = "0.32"

# Audio capture dependencies
windows = { version = "0.51", features = ["Media_Audio", "Media_Capture", "Win32_Media_Audio", "Win32_Media_MediaFoundation"], optional = true }
coreaudio-rs = { version = "0.11", optional = true }
alsa = { version = "0.8", optional = true }
pipewire = { version = "0.7", optional = true }
cpal = "0.15"

# Video capture dependencies
screenshots = "0.8"
wgpu = "0.18"
nokhwa = { version = "0.12", features = ["input-v4l", "input-msmf"] }
headless_chrome = "1.0"
webdriver = "0.52"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }

# Codec dependencies
opus = "0.3"
ffmpeg-next = { version = "6.0", features = ["codec", "format"] }

# Transcription
faster-whisper = "0.8"

# Home automation dependencies
hue-rs = "0.4"
roku-ecp = "0.2"
onvif = "0.5"
unifi = "0.8"
govee-lan = "0.3"
rumqttc = "0.24"
btleplug = "0.11"

[features]
default = []
windows-audio = ["windows"]
macos-audio = ["coreaudio-rs"]
linux-audio-alsa = ["alsa"]
linux-audio-pipewire = ["pipewire"]

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.2"
