[package]
name = "cipher-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
base64 = "0.21"
sha2 = "0.10"
ring = "0.17"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
age = { version = "0.9", features = ["armor"] }
secrecy = "0.8"
anyhow = "1.0"

array_ref = "0.1"

# Phoenix ORCH dependencies
phoenix-common = { path = "../../phoenix-kernel/phoenix-common" }
phoenix-orch = { path = "../.." }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }