[package]
name = "ember-unit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
regex = "1.9"          # For parsing natural language commands
lazy_static = "1.4"    # For singleton pattern

# Network scanning dependencies
ipnetwork = "0.20"     # For CIDR parsing
socket2 = "0.5"        # Low-level socket operations
tokio-stream = "0.1"   # For async stream processing
parking_lot = "0.12"   # For improved concurrency control

# Phoenix ORCH dependencies
phoenix-common = { path = "../../phoenix-kernel/phoenix-common" }
phoenix-orch = { path = "../.." }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }