[package]
name = "cipher-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"