[package]
name = "perception-fusion"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Multi-Modal Perception Fusion for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Phoenix dependencies
phoenix-common = { path = "../phoenix-common" }
plastic-ltm = { path = "../plastic-ltm" }
world-self-model = { path = "../world-self-model" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"
# NOTE: `criterion` was removed during the Phoenix kernel resurrection
# to avoid constraining the workspace to a specific `once_cell` version
# required only for benchmarks. Benchmarking can be reintroduced later
# with a pinned toolchain once core build stability is guaranteed.

[features]
default = []

# Enable CUDA support
# NOTE: The upstream `tch` crate currently does not expose a `cuda`
# feature matching the previous `tch/cuda` mapping. For now we keep
# the `cuda` feature as a no-op so the API surface remains stable,
# and will wire this to real GPU support when a compatible backend
# is selected.
cuda = []

# Enable hardware acceleration (placeholder for future backends)
gpu = []

# Enable additional sensor types
extended-sensors = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "perception"
safety-critical = true
requires-audit = true
hardware-access = true
