[package]
name = "phoenix-common"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Common utilities and types for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ring = "0.17"
pqcrypto = "0.17"
sha3 = "0.10"
# NOTE: Merkle proofs are currently represented as raw bytes in types
# and implemented internally in PLTM; no external `merkle_tree` crate
# is required here. This dependency was removed to avoid pulling in
# yanked transitive crates.

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
tracing-appender = "0.2"

# Utilities
lazy_static = "1.4"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"
tempfile = "3.8"

[features]
default = []
testing = []

# Enable additional safety checks
safety-critical = []

# Enable memory persistence features
persistence = []

# Enable real-time monitoring
monitoring = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "common"
safety-critical = true
requires-audit = true