[package]
name = "phoenix-core"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Core orchestration daemon for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Phoenix components
phoenix-common = { path = "../phoenix-common" }
plastic-ltm = { path = "../plastic-ltm" }
world-self-model = { path = "../world-self-model" }
triune-conscience = { path = "../triune-conscience" }
value-lock = { path = "../value-lock" }
perception-fusion = { path = "../perception-fusion" }
incremental-learner = { path = "../incremental-learner" }
phoenix-debug-trace = { path = "../phoenix-debug-trace" }
phoenix-self-heal = { path = "../phoenix-self-heal" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
warp = "0.3"

# Database
sled = "0.34"

# Static initialization
lazy_static = "1.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
toml = "0.8"

# Cryptography
ring = "0.17"
pqcrypto = "0.17"
sha3 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and monitoring
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.20", features = ["rt-tokio", "metrics"] }

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# System integration
nix = "0.26"
libc = "0.2"
sysinfo = "0.29"
procfs = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"
tempfile = "3.8"
pqcrypto = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bench]]
name = "http_benchmarks"
harness = false

[features]
default = []

# Enable always-on mode
always-on = []

# Enable resurrection mode
resurrection = []

# Enable debug mode
debug = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "core"
safety-critical = true
requires-audit = true
system-access = true
