[package]
name = "phoenix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
thiserror = "1.0"
toml = "0.8"
prometheus = "0.13"

# Internal dependencies
phoenix-common = { path = "../phoenix-common" }
warp = "0.3"
thiserror = "1.0"
toml = "0.8"
prometheus = "0.13"

# Optional Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_Foundation"
]}
sysinfo = "0.29"

[dev-dependencies]
tokio-test = "0.4"
