[package]
name = "phoenix-debug-trace"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
phoenix-common = { path = "../phoenix-common" }

# Platform-specific monitoring
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.15", optional = true }

[target.'cfg(windows)'.dependencies]
sysinfo = "0.29"
windows = { version = "0.48", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation"
]}

[features]
default = []
linux-debug = ["procfs"]

[dev-dependencies]
tokio-test = "0.4"
