[package]
name = "phoenix-self-heal"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Self-Healing System for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Phoenix dependencies
phoenix-common = { path = "../phoenix-common" }
phoenix-debug-trace = { path = "../phoenix-debug-trace" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Monitoring
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.20", features = ["rt-tokio", "metrics"] }

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# System monitoring
sysinfo = "0.29"
procfs = "0.15"
# NOTE: The `heim` crate was previously pulled in for experimental
# cross-platform system metrics, but the current self-heal implementation
# does not use it. It also introduces an incompatible `once_cell` (~1.5)
# constraint that conflicts with other workspace dependencies. We remove
# it here to keep the dependency graph resolvable.

# Process management
nix = "0.26"
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"

[features]
default = []

# Enable process resurrection
resurrection = []

# Enable resource reallocation
reallocation = []

# Enable failover support
failover = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "self-heal"
safety-critical = true
requires-audit = true
system-access = true
