[package]
name = "phoenix-self-heal"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Internal dependencies
phoenix-common = { path = "../phoenix-common" }

# System monitoring
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

[target.'cfg(windows)'.dependencies]
sysinfo = "0.29"
windows = { version = "0.48", features = [
    "Win32_System_Performance",
    "Win32_Foundation"
]}

[dev-dependencies]
tokio-test = "0.4"
