[package]
name = "plastic-ltm"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Plastic Long-Term Memory (PLTM) for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Phoenix dependencies
phoenix-common = { path = "../phoenix-common" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Storage
# NOTE: For the pure-Rust resurrection profile we rely solely on `sled`
# as the primary key-value store to avoid native RocksDB/zstd bindings.
sled = { version = "0.34", features = ["compression"] }

# Cryptography
pqcrypto = "0.17"
sha3 = "0.10"
ring = "0.17"
# NOTE: Merkle tree functionality is implemented internally using
# sled + sha3 in `plastic-ltm` and does not rely on an external
# `merkle_tree` crate. This dependency was removed to avoid pulling
# in yanked transitive crates like `rmp-serde` while keeping the
# Merkle API surface stable.

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"

[features]
default = []

# Enable additional durability guarantees
durability = []

# Enable memory mirroring
mirroring = []

# Enable memory reconsolidation
reconsolidation = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "memory"
safety-critical = true
requires-audit = true
durability-years = 200
