[package]
name = "plastic-ltm"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Update to newer version that uses compatible zstd
sled = "0.34.7"  # This version uses newer zstd
zstd = "0.10"    # Pin to same major version as used by tch

# Crypto and serialization
bincode = "1.3"
sha3 = "0.10"
rand = "0.8"
pqcrypto = "0.17"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5.0"

# Other dependencies
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal dependencies
phoenix-common = { path = "../phoenix-common" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.2"
