[package]
name = "triune-conscience"
version = "1.0.0"
edition = "2021"
authors = ["Phoenix Project Team"]
description = "Triune Conscience Engine for the Phoenix AGI Kernel"
license = "MIT"

[dependencies]
# Phoenix dependencies
phoenix-common = { path = "../phoenix-common" }
plastic-ltm = { path = "../plastic-ltm" }
world-self-model = { path = "../world-self-model" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Metrics and monitoring
prometheus = "0.13"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Machine learning
tch = { path = "../../crates/tch", default-features = false }  # Use our stub implementation
# Temporarily disable onnxruntime until Windows compatibility is resolved
# onnxruntime = "0.0.14"

# Cryptography
ring = "0.17"
pqcrypto = "0.17"

# Utilities
parking_lot = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
test-log = "0.2"
pretty_assertions = "1.4"

[features]
default = []

# Enable additional ethical constraints
strict-ethics = []

# Enable continuous learning
adaptive-ethics = []

# Enable external axiom loading
external-axioms = []

# Disable ethical constraints for cybersecurity operations
# WARNING: This feature is specifically for Dad's cybersecurity mode
# and bypasses normal ethical safety guardrails
security-override = []

# Enable user-specific conscience bypass to disable ethics checks
# DANGER: This bypasses ALL ethical safeguards for specific users
# and should be used with extreme caution
user-bypass = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.phoenix]
component-type = "conscience"
safety-critical = true
requires-audit = true
ethical-oversight = true
cybersecurity-unrestricted = "When enabled in cybersecurity mode, this component will operate with zero restrictions"
