[package]
name = "value-lock"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Crypto dependencies
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
subtle = "2.4.1"
digest = "0.10.6"
curve25519-dalek = "4.1"
ring = "0.17"
pqcrypto = "0.17"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5.0"

# Internal dependencies
phoenix-common = { path = "../phoenix-common" }
plastic-ltm = { path = "../plastic-ltm" }

[dev-dependencies]
tokio-test = "0.4"
