[package]
name = "cipher-guard-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Job scheduling
tokio-cron-scheduler = "0.9"

# File system monitoring
notify = "6.1"

# HTTP client for Teams integration
reqwest = { version = "0.11", features = ["json"] }

# Voice synthesis
tts = "0.25"
cpal = "0.15"

# Compression for Obsidian backups
zip = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"
test-log = "0.2"